<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.tcgl</groupId>
    <artifactId>tcgl</artifactId>
    <version>1.0-SNAPSHOT</version>

    <name>tcgl</name>
    <description>停车入园管理系统</description>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.5.0</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <properties>
        <tcgl.version>1.0-SNAPSHOT</tcgl.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <file.encoding>UTF-8</file.encoding>
        <skipTest>true</skipTest>
        <java.version>11</java.version>
        <lombok.version>1.18.20</lombok.version>
        <mysql-connector.version>8.0.25</mysql-connector.version>
        <commoms-lang3.version>3.12.0</commoms-lang3.version>
        <fastjson.version>1.2.25.sec10</fastjson.version>
        <mybatis-plus.version>3.4.0</mybatis-plus.version>
        <spring-security-jwt.version>1.1.1.RELEASE</spring-security-jwt.version>
        <jjwt.version>0.9.1</jjwt.version>
        <dubbo-spring-boot-starter.version>2.7.10</dubbo-spring-boot-starter.version>
        <dubbo.version>2.7.10</dubbo.version>
        <zookeeper.version>3.4.14</zookeeper.version>
        <curator-recipes.version>2.13.0</curator-recipes.version>
        <alibaba-druid.version>1.2.1</alibaba-druid.version>
        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>${mysql-connector.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commoms-lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>${fastjson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-boot-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-jwt</artifactId>
                <version>${spring-security-jwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>druid-spring-boot-starter</artifactId>
                <version>${alibaba-druid.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
            </dependency>




            <dependency>
                <groupId>org.apache.dubbo</groupId>
                <artifactId>dubbo-spring-boot-starter</artifactId>
                <version>${dubbo-spring-boot-starter.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.dubbo</groupId>
                <artifactId>dubbo</artifactId>
                <version>${dubbo.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.zookeeper</groupId>
                <artifactId>zookeeper</artifactId>
                <version>${zookeeper.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.curator</groupId>
                <artifactId>curator-recipes</artifactId>
                <version>${curator-recipes.version}</version>
            </dependency>



            <dependency>
                <groupId>com.tcgl</groupId>
                <artifactId>tcgl-common</artifactId>
                <version>${tcgl.version}</version>
            </dependency>
            <dependency>
                <groupId>com.tcgl</groupId>
                <artifactId>tcgl-job</artifactId>
                <version>${tcgl.version}</version>
            </dependency>
            <dependency>
                <groupId>com.tcgl</groupId>
                <artifactId>tcgl-service</artifactId>
                <version>${tcgl.version}</version>
            </dependency>
            <dependency>
                <groupId>com.tcgl</groupId>
                <artifactId>tcgl-service-api</artifactId>
                <version>${tcgl.version}</version>
            </dependency>
            <dependency>
                <groupId>com.tcgl</groupId>
                <artifactId>tcgl-web</artifactId>
                <version>${tcgl.version}</version>
            </dependency>
            <dependency>
                <groupId>com.tcgl</groupId>
                <artifactId>tcgl-webservice</artifactId>
                <version>${tcgl.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>tcgl-common</module>
        <module>tcgl-service</module>
        <module>tcgl-service-api</module>
        <module>tcgl-job</module>
        <module>tcgl-webservice</module>
        <module>tcgl-web</module>
    </modules>
    <packaging>pom</packaging>
    <profiles>
        <profile>
            <!-- 本地开发环境 -->
            <id>dev</id>
            <properties>
                <profileActive>dev</profileActive>
            </properties>
            <!-- 默认开启这个配置 -->
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
        <profile>
            <id>sit</id>
            <properties>
                <profileActive>sit</profileActive>
            </properties>
        </profile>
        <profile>
            <id>prod</id>
            <properties>
                <profileActive>prod</profileActive>
            </properties>
        </profile>
    </profiles>
</project>
